Fixed it for fullscreen, padding was too low

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 header {
     background-color: #1F2937;
     display: flex;
-    padding: 0px 10%;
+    padding: 0px 17%;
     justify-content: space-between;
 }
 
@@ -36,7 +36,7 @@ nav {
 
 .hero {
     display: flex;
-    padding: 10% 10%;
+    padding: 10% 17%;
     gap: 10%;
     background-color: #1F2937;
 }
@@ -80,7 +80,7 @@ nav {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 25px 10%;
+    padding: 25px 20%;
     gap: 25px;
 }
 
@@ -114,7 +114,7 @@ nav {
 /* QUOTE */
 
 .quote {
-    padding: 100px 10%;
+    padding: 100px 20%;
     background-color: #E5E7EB;
 }
 
@@ -131,7 +131,7 @@ nav {
 /* ACTION */
 
 .action {
-    padding: 50px 10%;
+    padding: 50px 20%;
 }
 
 .actionContainer {
